--- a/FinalExamIOS/FinalExamIOS/View/Base.lproj/Main.storyboard
+++ b/FinalExamIOS/FinalExamIOS/View/Base.lproj/Main.storyboard
@@ -4,11 +4,10 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--API Consume-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FinalExamIOS" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,12 +18,12 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cfT-2g-ZPd">
                                 <rect key="frame" x="0.0" y="103" width="393" height="300"/>
                                 <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wCf-u4-wmT">
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Sincere@april.biz" borderStyle="roundedRect" placeholder="Type Her" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wCf-u4-wmT">
                                         <rect key="frame" x="30" y="64" width="333" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="cp9-CK-e1l"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FPh-HE-7R3">
@@ -45,27 +44,29 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eki-iI-SwM">
+                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" borderStyle="roundedRect" placeholder="Type Her" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eki-iI-SwM">
                                         <rect key="frame" x="30" y="162" width="333" height="30"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="V3G-eO-Nfv"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dbH-bx-X4J">
-                                        <rect key="frame" x="30" y="230" width="333" height="40"/>
+                                        <rect key="frame" x="84" y="230" width="225" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="KCu-Nd-qBd"/>
                                         </constraints>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Button">
+                                            <color key="baseBackgroundColor" red="0.070588235289999995" green="0.54901960780000003" blue="0.4941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </buttonConfiguration>
                                         <connections>
                                             <action selector="logInButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QQY-30-UzZ"/>
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemCyanColor"/>
+                                <color key="backgroundColor" red="0.92549019610000005" green="0.8980392157" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="e7O-xI-Vbk" firstAttribute="leading" secondItem="cfT-2g-ZPd" secondAttribute="leading" constant="30" id="44L-pn-9Zq"/>
                                     <constraint firstItem="e7O-xI-Vbk" firstAttribute="top" secondItem="wCf-u4-wmT" secondAttribute="bottom" constant="16" id="7Fr-wl-PJs"/>
@@ -75,8 +76,8 @@
                                     <constraint firstAttribute="height" constant="300" id="8ZR-aZ-WMf"/>
                                     <constraint firstAttribute="trailing" secondItem="FPh-HE-7R3" secondAttribute="trailing" constant="30" id="BLI-Vs-pNn"/>
                                     <constraint firstItem="dbH-bx-X4J" firstAttribute="top" secondItem="eki-iI-SwM" secondAttribute="bottom" constant="38" id="EVY-Bi-xmz"/>
-                                    <constraint firstAttribute="trailing" secondItem="dbH-bx-X4J" secondAttribute="trailing" constant="30" id="HEG-7D-5LB"/>
-                                    <constraint firstItem="dbH-bx-X4J" firstAttribute="leading" secondItem="cfT-2g-ZPd" secondAttribute="leading" constant="30" id="Ktz-Og-J55"/>
+                                    <constraint firstAttribute="trailing" secondItem="dbH-bx-X4J" secondAttribute="trailing" constant="84" id="HEG-7D-5LB"/>
+                                    <constraint firstItem="dbH-bx-X4J" firstAttribute="leading" secondItem="cfT-2g-ZPd" secondAttribute="leading" constant="84" id="Ktz-Og-J55"/>
                                     <constraint firstAttribute="trailing" secondItem="eki-iI-SwM" secondAttribute="trailing" constant="30" id="NyQ-Ei-2as"/>
                                     <constraint firstItem="wCf-u4-wmT" firstAttribute="top" secondItem="FPh-HE-7R3" secondAttribute="bottom" constant="16" id="bwv-ue-b7z"/>
                                     <constraint firstItem="eki-iI-SwM" firstAttribute="top" secondItem="e7O-xI-Vbk" secondAttribute="bottom" constant="16" id="i5U-FA-cvT"/>
@@ -88,14 +89,18 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.92549019607843142" green="0.89803921568627454" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="cfT-2g-ZPd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="RUL-5T-lJC"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cfT-2g-ZPd" secondAttribute="trailing" id="ToW-pa-exy"/>
                             <constraint firstItem="cfT-2g-ZPd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="l1V-eq-AM4"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="XTd-57-roW"/>
+                    <navigationItem key="navigationItem" title="API Consume" id="XTd-57-roW"/>
+                    <connections>
+                        <outlet property="emailTextField" destination="wCf-u4-wmT" id="WgM-ae-bjg"/>
+                        <outlet property="passwordTextField" destination="eki-iI-SwM" id="FVs-gJ-pSp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -109,6 +114,11 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="FVA-RA-3a0">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.070588235289999995" green="0.54901960780000003" blue="0.4941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -120,12 +130,4 @@
             <point key="canvasLocation" x="130.53435114503816" y="-34.507042253521128"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemCyanColor">
-            <color red="0.1960784314" green="0.67843137249999996" blue="0.90196078430000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-    </resources>
 </document>
