--- a/FinalExamIOS/FinalExamIOS/View/Base.lproj/Main.storyboard
+++ b/FinalExamIOS/FinalExamIOS/View/Base.lproj/Main.storyboard
@@ -58,7 +58,7 @@
                                             <constraint firstAttribute="height" constant="40" id="KCu-Nd-qBd"/>
                                         </constraints>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Button">
+                                        <buttonConfiguration key="configuration" style="filled" title="Log In">
                                             <color key="baseBackgroundColor" red="0.070588235289999995" green="0.54901960780000003" blue="0.4941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </buttonConfiguration>
                                         <connections>
